tests/ui/foreign_use.stderr
Error [E0015]: Jet does not use `use`
  --> tests/ui/foreign_use.jet:1:1
    |
  1 | use grades;
    | ^^^
 Why: other files are brought in with `import "path"` or `import name` (S16; M6)
 Fix: replace with `import "path";`, `import name;`, or `import "path" as alias;`
